# VelvetFlow

./: .gitignore  LICENSE  README.en.md  README.md  agent_cli.py  build_action_index.py  build_workflow.py  execute_workflow.py  fetch_composio_tools.py  pyproject.toml  render_workflow_image.py  requirements.txt  run_unified_agent.py  simulation_data.json  update_workflow.py  validate_workflow.py  workflow_fc_hybrid_actions_demo.py
docs/: advanced_guide.en.md  advanced_guide.md  core_concepts.en.md  core_concepts.md  internal_design.en.md  internal_design.md  legacy_binding_removal.md  loop_exports_troubleshooting.md  openai_token_security.en.md  openai_token_security.md  quickstart.en.md  quickstart.md  troubleshooting.en.md  troubleshooting.md  workflow_dsl_schema.en.md  workflow_dsl_schema.md  workflow_grammar.md
jinja2/: __init__.py
numpy/: __init__.py
openai/: __init__.py
tests/: conftest.py  test_action_id_validation.py  test_action_registry.py  test_aggregation_mini_expr.py  test_async_workflow_suspend_resume.py  test_binding_context_errors.py  test_binding_snapshot_generators.py  test_build_workflow_e2e.py  test_business_action.py  test_common_ask_ai_expected_format.py  test_composio_registration.py  test_condition_branches.py  test_condition_compare.py  test_condition_expression_compare.py  test_condition_field_path_validation.py  test_condition_list_sources.py  test_condition_param_filter.py  test_connectivity_repair.py  test_crawl_query_handling.py  test_crawl_url_normalization.py  test_execute_workflow_cli.py  test_executor_action_progress.py  (+63 more)
(+129 files in other folders)
