[project]
name = "velvetflow"
version = "0.1.0"
description = "Reusable LLM-driven workflow planning and execution demo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.30.0",
  "openai-agents",
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "anyio>=4.4.0",
  "pillow>=10.0.0",
  "pydantic>=1.10.0",
  "pytest>=8.0.0",
  "fastapi>=0.110.0",
  "hypercorn>=0.14.0",
  "readability-lxml>=0.8.1",
  "jinja2>=3.1.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.0",
  "playwright>=1.43.0",
  "trafilatura>=1.9.0",
  "lxml-html-clean>=0.2.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["velvetflow"]

[tool.uv]
# Keep the environment synced with dependencies defined above
# without needing an editable install.
package = true

[tool.pytest.ini_options]
markers = [
  "openai_e2e: runs against the real OpenAI endpoint and requires OPENAI_API_KEY",
]
